--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body ng-app="customReddit" ng-controller="redditCtrl">
         <link-bar></link-bar>
+        <animal-header></animal-header>
+        <tab-bar></tab-bar>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
         <script src="script/script.js"></script>
     </body>
