posts from hardcoded array

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <tab-bar></tab-bar>
         <div class="container grid--borderBetween">
             <div class="col-xs-9" id="postDiv">
-                
+                <reddit-posts></reddit-posts>
             </div>
             <div class="col-xs-3" id="sideBar">
                 <side-bar></side-bar>
@@ -21,6 +21,6 @@
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
         <script src="script/script.js"></script>
-        <script src="factory.js"></script>
+        <!--<script src="factory.js"></script>-->
     </body>
 </html>
