--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
 <div id="headerContainer">
     <img src="images/animalheader.png" id="animalHeader">
-    <img src="http://b.thumbs.redditmedia.com/pikocEPYmbmcFrUUVv87EKojY_xpAFRrqmengPIsLZU.png" id="subLogo">
+    <img src="https://b.thumbs.redditmedia.com/pikocEPYmbmcFrUUVv87EKojY_xpAFRrqmengPIsLZU.png" id="subLogo">
 </div>
